<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartKids</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="book">Book</string>
    <string name="quick_play">Baca Sendiri</string>
    <string name="parent_mode">Parent Mode</string>
    <string name="child_mode">Child Mode</string>
    <string name="hint">Hint</string>
    <string name="setting">Setting</string>
    <string name="achievement">Achievement</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_menu_iqra">MenuIqraActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_section">SectionActivity</string>
    <string name="title_activity_child_list">ChildListActivity</string>
    <string name="add_child_please">no cildren, please add</string>
    <string name="enter_child_name">Enter child name</string>
    <string name="name_already_exist">Name already exist</string>
    <string name="confirmation">konfimasi</string>
    <string name="are_you_sure_want_to_delete">Yakin ingin hapus</string>
    <string name="title_activity_section_view">SectionViewActivity</string>
    <string name="kurang">KURANG</string>
    <string name="cukup">CUKUP</string>
    <string name="baik">BAIK</string>
    <string name="next">SELANJUTNYA</string>
    <string name="back">KEMBALI</string>
    <string name="next2">LANJUT</string>
    <string name="start">MULAI</string>
    <string name="exit2">KELUAR</string>
    <string name="prev">SEBELUMNYA</string>
    <string name="child_list">Daftar anak</string>
    <string name="title_activity_finish_book">FinishBookActivity</string>
    <string name="please_enter_child_name">Please enter child name</string>
    <string name="title_activity_page_list">PageListActivity</string>
    <string name="title_activity_hint">HintActivity</string>
    <string name="title_hint_1">Santri Kecil</string>
    <string name="title_hint_2">Anak Genius</string>
    <string name="title_text_1">Santri Kecil di TK Al Qur’an Bawa Iqro dan bawa Al Qur’an Rajin Sholat dan Rajin Mengaji Sayang kawan tak suka bermusuhan </string>
    <string name="title_text_2">Ayo bangkitkan Prestasimu </string>
    <string name="baca_sendiri">Belajar Mengaji</string>
    <string name="jadi_pengajar">Jadi Pengajar</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="donasi">Belajar Menghitung</string>
    <string name="buat_pin_pengajar">Buat PIN Orang Tua</string>
    <string name="input_pin">input PIN</string>
    <string name="pin_confirm">PIN confirmation</string>
    <string name="mulai_mengajar">MULAI MENGAJAR ANAK</string>
    <string name="login">LOGIN</string>
    <string name="field_cant_be_empty">PIN tidak boleh kosong</string>
    <string name="pin_minimal">PIN minimal 4 digits</string>
    <string name="pin_confirm_not_match">konfirmasi PIN tidak sama</string>
    <string name="pin_created">PIN berhasil dibuat</string>
    <string name="invalid_pin">PIN salah</string>
    <string name="daftar_peserta">Daftar peserta didik</string>
    <string name="select_level">Pilih tingkatan</string>
    <string name="nilai_akhir">Nilai akhir</string>
    <string name="title_activity_tutor">TutorActivity</string>
    <string name="play_sound">MAINKAN AUDIO</string>
    <string name="title_activity_donasi">DonasiActivity</string>
    <string name="donate_us">Donate us</string>
    <string name="klik_iklan">klik iklan dibawah</string>
    <string name="or">atau</string>
    <string name="banner_ad_unit_id">ca-app-pub-2804081175309116/7079447784</string>
    <string name="admob_interstitial_id">ca-app-pub-2804081175309116/5463113787</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="aplikasisk">APPS MOBILE EARLY CHILDHOOD SMART</string>
    <string name="desc_main">Geometri merupakan cabang ilmu matematika yang mempelajari tentang hubungan antara titik-titik, garis-garis, bidang-bidang seperti bangun datar dan bangun ruang.</string>
    <string name="desc_bangun_datar">Terdapat 9 jenis bangun datar pada aplikasi ini. Pilihlah bangun datar dibawah ini untuk membaca teori dan rumusnya serta kalkulator penghitung.</string>
    <string name="desc_bangun_ruang">Pada aplikasi ini, terdapat 8 pilihan bangun ruang. Pilih diantara bangun ruang berikut untuk membaca teori dan rumusnya serta kalkulator penghitung</string>

</resources>
