<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="${relativePackage}.${activityClass}" >

  
       <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/putih"
        android:textSize="30dp"
        android:text="@string/select_level" />

      
      
    <android.support.v4.view.ViewPager
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/viewPager"
	    android:layout_below="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_above="@+id/bottomMenu"
	    android:layout_height="match_parent" />
    
    
    <RelativeLayout  
        			 android:id="@+id/bottomMenu"
        			 android:layout_width="match_parent"
        			 android:layout_alignParentBottom="true"
        			 android:layout_height="60dp">
       
        <View android:layout_width="match_parent" android:layout_height="0.5dp" android:background="@color/list_sparator" android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/btnMulai"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/putih_gelap2"
            android:background="@drawable/btn_text_state"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnMulai"
            android:textColor="@color/putih_gelap2"
             android:background="@drawable/btn_text_state"
            android:text="@string/back" />
        
    </RelativeLayout>

</RelativeLayout>
