<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih_gelap"
    tools:context="com.gamewae.iqra.MainActivity" >

    <LinearLayout
        android:id="@+id/mainTop"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/mainBottom"

        android:layout_height="match_parent" >
        
        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_smartkids" />
        
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainBottom"
        android:background="@color/putih"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
         android:gravity="center"
        android:orientation="vertical">
        
      	 <LinearLayout
      	     android:id="@+id/topInnerWrapper"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:weightSum="2"
	        android:orientation="horizontal">
	        	
	    	   <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:background="@drawable/gradient_red"
		        android:gravity="center"
		        android:padding="5dp"
		        android:orientation="vertical">

	    	       <com.gamewae.iqra.widget.CustomImageButton
	    	           android:id="@+id/btnSendiri"
	    	            android:layout_width="67dp"
	    	           android:layout_height="90dp"
	    	           android:background="@null"
	    	           android:src="@drawable/ic_mengaji" />

	    	       <TextView
	    	           android:id="@+id/textView1"
	    	           android:layout_width="wrap_content"
	    	           android:layout_height="wrap_content"
	    	           android:textSize="18dp"
	    	           android:textStyle="bold"
	    	           android:textColor="@color/item_transparan"
	    	           android:text="@string/baca_sendiri" />
		        	
		    	</LinearLayout>
		    
		        <LinearLayout
			          android:background="@drawable/gradient_green"
			       android:layout_width="0dp"
		         android:layout_height="match_parent"
			        android:layout_weight="1"
			          android:gravity="center"
		            android:padding="5dp"
			        android:orientation="vertical">
	    	       
		            <com.gamewae.iqra.widget.CustomImageButton
	    	           android:id="@+id/btnPengajar"
	    	           android:layout_width="89dp"
	    	           android:layout_height="90dp"
	    	           android:background="@null"
	    	           android:src="@drawable/ic_pengajar" />

	    	       <TextView
	    	           android:id="@+id/textView2"
	    	           android:layout_width="wrap_content"
	    	           android:layout_height="wrap_content"
	    	           android:textSize="18dp"
	    	           android:textStyle="bold"
	    	           android:textColor="@color/putih"
	    	           android:text="@string/jadi_pengajar" />
		        
		    	</LinearLayout>
    	</LinearLayout>
    
        <LinearLayout
         
             android:id="@+id/bottomInnerWrapper"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	         android:gravity="center"
	        android:layout_weight="1"
	        android:weightSum="2"
	        android:orientation="horizontal">
		        
            <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		         android:padding="5dp"
		       android:background="@drawable/gradient_blue"
		        android:orientation="vertical">
	    	       
                 <com.gamewae.iqra.widget.CustomImageButton
	    	           android:id="@+id/btnPengaturan"
	    	            android:layout_width="89dp"
	    	           android:layout_height="90dp"
	    	           android:background="@null"
	    	           android:src="@drawable/ic_settings" />

	    	       <TextView
	    	           android:id="@+id/textView3"
	    	           android:layout_width="wrap_content"
	    	           android:layout_height="wrap_content"
	    	           android:textSize="18dp"
	    	           android:textStyle="bold"
	    	           android:textColor="@color/putih"
	    	           android:text="@string/pengaturan" />
	    	       
		    	</LinearLayout>
		    
		        <LinearLayout
			       android:background="@drawable/gradient_oren"
			       android:layout_width="0dp"
		         android:layout_height="match_parent"
			        android:layout_weight="1"
			        android:gravity="center"
		            android:padding="5dp"
			        android:orientation="vertical">
	    	       
		            <com.gamewae.iqra.widget.CustomImageButton
	    	           android:id="@+id/btnDonasi"
	    	           android:layout_width="67dp"
	    	           android:layout_height="90dp"
	    	           android:background="@null"
	    	           android:src="@drawable/ic_match" />

	    	       <TextView
	    	           android:id="@+id/textView4"
	    	           android:layout_width="wrap_content"
	    	           android:layout_height="wrap_content"
	    	           android:textSize="18dp"
	    	           android:textStyle="bold"
	    	           android:textColor="@color/item_transparan"
	    	           android:text="@string/donasi" />
		        
		    	</LinearLayout>
        
    	</LinearLayout>
        
    </LinearLayout>
	
</RelativeLayout>
